--- a/page5.html
+++ b/page5.html
@@ -117,6 +117,7 @@
 		</div>  
 		<!-- Changed from slim to full version --->
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
 		<script src="reservation.js"></script>
 	</body>
 </html>
